# QuadraticEquations

./: CMakeLists.txt  quadratic.cpp  quadratic.h  quadratic_test.cpp
